style image a propos ajouter

--- a/a_propos.html
+++ b/a_propos.html
@@ -107,7 +107,7 @@
       
       <section class="section">
           <h2>Photos</h2>
-          <img src="./image_background_biographie/WhatsApp Image 2024-06-30 à 04.17.53_e7296dc6.jpg" alt="Photo du créateur" class="photo">
+          <img src="./image_background_biographie/WhatsApp Image 2024-06-30 à 04.17.53_e7296dc6.jpg" alt="Photo du créateur" class="photo" style="border-radius: 5px 2px; justify-content: center; align-items: center;">
       </section>
       
       <section class="section">
