--- a/a_propos.html
+++ b/a_propos.html
@@ -38,6 +38,7 @@
       }
       .section {
           margin-bottom: 40px;
+          text-align: center;
       }
       h2 {
           border-bottom: 2px solid #333;
@@ -107,7 +108,7 @@
       
       <section class="section">
           <h2>Photos</h2>
-          <img src="./image_background_biographie/WhatsApp Image 2024-06-30 à 04.17.53_e7296dc6.jpg" alt="Photo du créateur" class="photo" style="border-radius: 5px 2px; justify-content: center; align-items: center;">
+          <img src="./image_background_biographie/WhatsApp Image 2024-06-30 à 04.17.53_e7296dc6.jpg" alt="Photo du créateur" class="photo" style="border-radius: 10px 2px; justify-content: center;">
       </section>
       
       <section class="section">
