changemant modification nav et footer

--- a/se_conneter.html
+++ b/se_conneter.html
@@ -96,7 +96,7 @@
             </div>
             <button type="submit" class="btn">Se connecter</button>
         </form>
-        <button onclick="location.href='inscription.html'" class="btn btn-secondary">S'inscrire</button>
+        <button onclick="location.href='./contact.html'" class="btn btn-secondary">S'inscrire</button>
     </section>
 </body>
 </html>
