--- a/contact.html
+++ b/contact.html
@@ -146,12 +146,12 @@
 <body>
     <div class="container">
         <section class="section">
-            <h2>Laissez-nous votre avis</h2>
+            <h2>laissez-moi vos avis</h2>
             <nav class="nav-tabs">
                 <a href="index.html">Accueil</a>
                 <a href="recette.html">Recettes</a>
                 <a href="contact.html">Contact</a>
-                <a href="#connexion">Se connecter</a>
+                <a href="./se_conneter.html">Se connecter</a>
             </nav>
 
             <form id="contact-form">
